// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TO CLASSNAMES ## NATIVE ## 01: null 1`] = `null`;

exports[`TO CLASSNAMES ## NATIVE ## 01: null 2`] = `null`;

exports[`TO CLASSNAMES ## NATIVE ## 01: null 3`] = `undefined`;

exports[`TO CLASSNAMES ## NATIVE ## 02: null, {}, undefined 1`] = `null`;

exports[`TO CLASSNAMES ## NATIVE ## 02: null, {}, undefined 2`] = `null`;

exports[`TO CLASSNAMES ## NATIVE ## 02: null, {}, undefined 3`] = `undefined`;

exports[`TO CLASSNAMES ## NATIVE ## 03: mixed 1`] = `
Array [
  Array [
    "color: red @$atomize",
  ],
  Array [
    "color: blue @$atomize[0]",
  ],
  Array [
    "color: yellow @$atomize[1]",
  ],
  Array [
    "color: maroon @/$if",
  ],
  Array [
    "color: green @$atomize",
  ],
]
`;

exports[`TO CLASSNAMES ## NATIVE ## 03: mixed 2`] = `
Object {
  "color": Object {
    "tracePath": "$atomize",
    "value": "green",
  },
}
`;

exports[`TO CLASSNAMES ## NATIVE ## 03: mixed 3`] = `
Object {
  "color": "green",
}
`;

exports[`TO CLASSNAMES ## NATIVE ## 04: query => opened 1`] = `
Array [
  Array [
    "color: red @/$if",
  ],
]
`;

exports[`TO CLASSNAMES ## NATIVE ## 04: query => opened 2`] = `
Object {
  "color": Object {
    "tracePath": "/$if",
    "value": "red",
  },
}
`;

exports[`TO CLASSNAMES ## NATIVE ## 04: query => opened 3`] = `
Object {
  "color": "red",
}
`;

exports[`TO CLASSNAMES ## NATIVE ## 05: query => closed 1`] = `
Array [
  Array [
    "color: blue @/$if",
  ],
]
`;

exports[`TO CLASSNAMES ## NATIVE ## 05: query => closed 2`] = `
Object {
  "color": Object {
    "tracePath": "/$if",
    "value": "blue",
  },
}
`;

exports[`TO CLASSNAMES ## NATIVE ## 05: query => closed 3`] = `
Object {
  "color": "blue",
}
`;

exports[`TO CLASSNAMES ## NATIVE ## 06: query => closed => pre-atomized 1`] = `
Array [
  Array [
    "color: blue @$atomize[1]/$if",
  ],
]
`;

exports[`TO CLASSNAMES ## NATIVE ## 06: query => closed => pre-atomized 2`] = `
Object {
  "color": Object {
    "tracePath": "$atomize[1]/$if",
    "value": "blue",
  },
}
`;

exports[`TO CLASSNAMES ## NATIVE ## 06: query => closed => pre-atomized 3`] = `
Object {
  "color": "blue",
}
`;

exports[`TO CLASSNAMES ## NATIVE ## 07: query => closed => pre-queried 1`] = `
Array [
  Array [
    "color: blue @/$if",
  ],
]
`;

exports[`TO CLASSNAMES ## NATIVE ## 07: query => closed => pre-queried 2`] = `
Object {
  "color": Object {
    "tracePath": "/$if",
    "value": "blue",
  },
}
`;

exports[`TO CLASSNAMES ## NATIVE ## 07: query => closed => pre-queried 3`] = `
Object {
  "color": "blue",
}
`;

exports[`TO CLASSNAMES ## NATIVE ## 08: sif, sifelse 1`] = `
Array [
  Array [
    "color: grey @/$sif",
  ],
  Array [
    "backgroundColor: blue @/$sifelse-true",
  ],
]
`;

exports[`TO CLASSNAMES ## NATIVE ## 08: sif, sifelse 2`] = `
Object {
  "backgroundColor": Object {
    "tracePath": "/$sifelse-true",
    "value": "blue",
  },
  "color": Object {
    "tracePath": "/$sif",
    "value": "grey",
  },
}
`;

exports[`TO CLASSNAMES ## NATIVE ## 08: sif, sifelse 3`] = `
Object {
  "backgroundColor": "blue",
  "color": "grey",
}
`;

exports[`TO CLASSNAMES ## NATIVE ## 08: sif, sifelse 4`] = `
Array [
  Array [
    "backgroundColor: blue @/$sifelse-false",
  ],
]
`;

exports[`TO CLASSNAMES ## NATIVE ## 08: sif, sifelse 5`] = `
Object {
  "backgroundColor": Object {
    "tracePath": "/$sifelse-false",
    "value": "blue",
  },
}
`;

exports[`TO CLASSNAMES ## NATIVE ## 08: sif, sifelse 6`] = `
Object {
  "backgroundColor": "blue",
}
`;

exports[`TO CLASSNAMES ## WEB ## 01: null 1`] = `null`;

exports[`TO CLASSNAMES ## WEB ## 01: null 2`] = `null`;

exports[`TO CLASSNAMES ## WEB ## 01: null 3`] = `undefined`;

exports[`TO CLASSNAMES ## WEB ## 02: null, {}, undefined 1`] = `null`;

exports[`TO CLASSNAMES ## WEB ## 02: null, {}, undefined 2`] = `null`;

exports[`TO CLASSNAMES ## WEB ## 02: null, {}, undefined 3`] = `undefined`;

exports[`TO CLASSNAMES ## WEB ## 03: mixed 1`] = `
Array [
  Array [
    ".a { color:red } @$atomize",
  ],
  Array [
    ".b { color:blue } @$atomize[0]",
  ],
  Array [
    ".c { color:yellow } @$atomize[1]",
  ],
  Array [
    ".e { color:maroon } @/$if",
  ],
  Array [
    ".d { color:green } @$atomize",
  ],
]
`;

exports[`TO CLASSNAMES ## WEB ## 03: mixed 2`] = `
Array [
  ".d { color:green } @$atomize",
]
`;

exports[`TO CLASSNAMES ## WEB ## 03: mixed 3`] = `"d"`;

exports[`TO CLASSNAMES ## WEB ## 04: query => opened 1`] = `
Array [
  Array [
    ".a { color:red } @/$if",
  ],
]
`;

exports[`TO CLASSNAMES ## WEB ## 04: query => opened 2`] = `
Array [
  ".a { color:red } @/$if",
]
`;

exports[`TO CLASSNAMES ## WEB ## 04: query => opened 3`] = `"a"`;

exports[`TO CLASSNAMES ## WEB ## 05: query => closed 1`] = `
Array [
  Array [
    ".b { color:blue } @/$if",
  ],
]
`;

exports[`TO CLASSNAMES ## WEB ## 05: query => closed 2`] = `
Array [
  ".b { color:blue } @/$if",
]
`;

exports[`TO CLASSNAMES ## WEB ## 05: query => closed 3`] = `"b"`;

exports[`TO CLASSNAMES ## WEB ## 06: query => closed => pre-atomized 1`] = `
Array [
  Array [
    ".b { color:blue } @$atomize[1]/$if",
  ],
]
`;

exports[`TO CLASSNAMES ## WEB ## 06: query => closed => pre-atomized 2`] = `
Array [
  ".b { color:blue } @$atomize[1]/$if",
]
`;

exports[`TO CLASSNAMES ## WEB ## 06: query => closed => pre-atomized 3`] = `"b"`;

exports[`TO CLASSNAMES ## WEB ## 07: query => closed => pre-queried 1`] = `
Array [
  Array [
    ".b { color:blue } @/$if",
  ],
]
`;

exports[`TO CLASSNAMES ## WEB ## 07: query => closed => pre-queried 2`] = `
Array [
  ".b { color:blue } @/$if",
]
`;

exports[`TO CLASSNAMES ## WEB ## 07: query => closed => pre-queried 3`] = `"b"`;

exports[`TO CLASSNAMES ## WEB ## 08: sif, sifelse 1`] = `
Array [
  Array [
    ".a { color:grey } @/$sif",
  ],
  Array [
    ".b { background-color:blue } @/$sifelse-true",
  ],
]
`;

exports[`TO CLASSNAMES ## WEB ## 08: sif, sifelse 2`] = `
Array [
  ".b { background-color:blue } @/$sifelse-true",
  ".a { color:grey } @/$sif",
]
`;

exports[`TO CLASSNAMES ## WEB ## 08: sif, sifelse 3`] = `"b a"`;

exports[`TO CLASSNAMES ## WEB ## 08: sif, sifelse 4`] = `
Array [
  Array [
    ".b { background-color:blue } @/$sifelse-false",
  ],
]
`;

exports[`TO CLASSNAMES ## WEB ## 08: sif, sifelse 5`] = `
Array [
  ".b { background-color:blue } @/$sifelse-false",
]
`;

exports[`TO CLASSNAMES ## WEB ## 08: sif, sifelse 6`] = `"b"`;
